tests/snapshots/tui_help__help_dialog_commit_detail_context.snap
---
source: tests/tui_help.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::help::render(&AppMode::CommitDetail, &mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Ref┌ Help — Commit Detail ────────────────────────────┐              ",
        "22222222   Add│                                                  █              ",
        "              │ Navigation                                       █              ",
        "              │   ↑/↓, j/k       Scroll up/down                  █              ",
        "              │   PgUp/PgDn      Scroll one page up/down         █              ",
        "              │   Space/b        Scroll one page down/up         █              ",
        "              │   Ctrl-F/B       Scroll one page down/up         █              ",
        "              │   Ctrl-D/U       Scroll half page down/up        █              ",
        "              │   Ctrl-PgDn/PgUp Scroll half page down/up        █              ",
        "              │   Ctrl ←/→       Move separator bar left/right   █              ",
        "              │                                                  █              ",
        "              │ Search                                           █              ",
        "              │   /              Search (regex)                  █              ",
        "              │   n              Next search match               █              ",
        "              │   N              Previous search match           █              ",
        "              │   Esc            Dismiss search                  █              ",
        "              │                                                  █              ",
        "              │ Views                                            █              ",
        "              │   Enter, i       Return to commit list           █              ",
        "              │   h              Show this help dialog           │              ",
        "              │                                                  │              ",
        "              └──────────────────────────────────────────────────┘              ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 14, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 26, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 22, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 18, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 21, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 21, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 22, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
