tests/snapshots/tui_help__help_dialog_full_size.snap
---
source: tests/tui_help.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::help::render(&AppMode::CommitList, &mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   R┌ Help — Commit List ──────────────────────────────────┐            ",
        "22222222   A│                                                      █            ",
        "            │ Operations                                           █            ",
        "            │   p              Split commit (choose strategy)      █            ",
        "            │   s              Squash commit (pick target)         █            ",
        "            │   f              Fixup commit (pick target)          █            ",
        "            │   r              Reword commit message               █            ",
        "            │   d              Drop commit                         █            ",
        "            │   m              Move commit (pick new position)     █            ",
        "            │   a              Stage all changes                   █            ",
        "            │   A              Unstage all changes                 █            ",
        "            │   c              Commit staged changes               █            ",
        "            │   u              Undo last operation                 │            ",
        "            │   C-r            Redo last operation                 │            ",
        "            │                                                      │            ",
        "            │ Views                                                │            ",
        "            │   Enter, i       Open commit detail view             │            ",
        "            │   h              Show this help dialog               │            ",
        "            │   R, F5          Refresh commit list from HEAD       │            ",
        "            │                                                      │            ",
        "            │ Navigation                                           │            ",
        "            └──────────────────────────────────────────────────────┘            ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 12, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 24, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 19, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 21, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 24, y: 21, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 22, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
