tests/snapshots/tui_help__help_dialog_scrolled.snap
---
source: tests/tui_help.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::help::render(&AppMode::CommitList, &mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "11111111   R┌ Help — Commit List ──────────────────────────────────┐            ",
        "22222222   A│   r              Reword commit message               │            ",
        "            │   d              Drop commit                         █            ",
        "            │   m              Move commit (pick new position)     │            ",
        "            │   u              Undo last operation                 │            ",
        "            │   C-r            Redo last operation                 │            ",
        "            │                                                      │            ",
        "            └──────────────────────────────────────────────────────┘            ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 12, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 68, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
