tests/snapshots/tui_help__help_dialog_short_terminal_scrollbar.snap
---
source: tests/tui_help.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::help::render(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Refac┌ Help - Keybindings ──────────────────────────┐                ",
        "22222222   Add f│                                              █                ",
        "                │ Navigation                                   │                ",
        "                │   ↑/↓, j/k  Move selection up/down           │                ",
        "                │   PgUp/PgDn Move one page up/down            │                ",
        "                │   ←/→       Scroll fragmap left/right        │                ",
        "                │   Ctrl ←/→  Move separator bar left/right    │                ",
        "                └──────────────────────────────────────────────┘                ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 16, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 28, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 30, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
